--- a/1.8_objetos/criando_metodos.html
+++ b/1.8_objetos/criando_metodos.html
@@ -7,23 +7,36 @@
 </head>
 <body>
     <ul id="planeFeatures"></ul>
+    <h1>Aviões</h1>
 </body>
 <script>
 
     // funcao construtora de Aviao
     function Aviao(modelo, capacidade, alcance, velocidadeMax, motores) {
-        this.modelo = modelo;
-        this.capacidade = capacidade;
+        this.Modelo = modelo;
+        this.Capacidade = capacidade;
         this.alcance = alcance;
-        this.velocidadeMax = velocidadeMax;
-        this.motores = motores;
-        this.voar = voar;
+        this.VelocidadeMax = velocidadeMax;
+        this.Motores = motores;
+        this.Voar = voar;
+    }
+
+    function Veiculo(modelo, cor, velocidadeMax, tanquedecombustivel) {
+        this.Modelo = modelo;
+        this.Cor = cor;
+        this.VelocidadeMax = velocidadeMax;
+        this.tanquedecombustivel = tanquedecombustivel;
     }
 
     // Cria 3 objetos Aviao usando a função construtora
+    var titulo = document.createElement('Avião');
     var boing747 = new Aviao("Boeing 747", 350, "13500 KM", "988 km/h", 4);
     var spitfire = new Aviao("Supermarine Spitfire", 1, "1,135 km", "594 km/h", 1);
     var mustang = new Aviao("P-51 Mustang", 1, "2,656 km", "703 km/h", 1);
+    var boingAirbus = new Aviao("Boeing 737-800", 1, "1,200 km", "680 km/h", 2);
+
+    var gol = new Veiculo("Gol", "Vermelho", 120, 100);
+    var golf = new Veiculo("Golf", "Preto", 120, 100);
 
 
 
@@ -52,10 +65,12 @@
     criaLista(boing747);
     criaLista(spitfire);
     criaLista(mustang);
+    criaLista(boingAirbus);
+
+    criaLista(gol);
+    criaLista(golf);
 
     alert(boing747.voar());
-
-
-
-</script>
+   </script>
+   
 </html>
